--- a/contact.html
+++ b/contact.html
@@ -1,13 +1,75 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <title>Document</title>
 </head>
+
+<div class="container" id="nav">
+
+  <div class="row"></div>
+  <div class="col-md-12">
+    <nav class="navbar navbar-dark bg-dark">
+      <a class="h1">Morgan Styers</a>
+      <div class="navbar-nav">
+        <a class="nav-item nav-link active" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
+        <a class="nav-item nav-link" href="./index.html">About</a>
+        <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+      </div>
+  </div>
+  </nav>
+</div>
 <body>
-    
+<div class="container" id="main">
+  <div class="row">
+    <div class="col-md-12">
+      <br>
+      <br>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-1">
+    </div>
+    <div class="col-md-10">
+        <div class="card">
+            <div class="card-body">
+           
+      <form>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Name</label>
+          <input type="name" class="form-control" id="exampleFormControlInput1" placeholder="John Smith">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlInput1">Email</label>
+          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+        </div>
+        <div class="form-group">
+          <label for="exampleFormControlTextarea1">Message</label>
+          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+        </div>
+        <button type="button" class="btn btn-outline-dark">Submit</button>
+      </form>
+    </div>
+  </div>
+  <div class= "col-md-1">
+
+  </div>
+</div>
+
+</div>
+</div>
+
+<div class="row"></div>
+
+</div>
+
+
+
 </body>
+
 </html>
