--- a/portfolio.html
+++ b/portfolio.html
@@ -1,13 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Document</title>
 </head>
+
 <body>
-    
+    <div class="container">
+
+        <div class="row"></div>
+        <div class="col-md-12">
+            <nav class="navbar navbar-dark bg-dark">
+                <a class="h1">Morgan Styers</a>
+                <div class="navbar-nav">
+                    <a class="nav-item nav-link active" href="./portfolio.html">Portfolio<span
+                            class="sr-only">(current)</span></a>
+                    <a class="nav-item nav-link" href="./index.html">About</a>
+                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
+                </div>
+        </div>
+        </nav>
+    </div>
+<br>
+<br>
+    <div class="main">
+        <div class="row">
+            <div class="col-md-1">
+
+            </div>
+            <div class="col-md-10">
+                <div class="card">
+                    <div class="card-body">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                            <img src="..." class="img-fluid" alt="Responsive image">
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-1">
+
+            </div>
+        </div>
+    </div>
+    </div>
+
+
 </body>
+
 </html>
