--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,7 @@
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link href="https://fonts.googleapis.com/css?family=Jacques+Francois+Shadow|Permanent+Marker&display=swap" rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css?family=Bangers|Jacques+Francois+Shadow|Permanent+Marker|VT323&display=swap" rel="stylesheet">
   <title>Document</title>
 </head>
 
@@ -34,6 +33,15 @@
       <br>
       <br>
     </div>
+  </div>
+  <div class="row">
+      <div class="col-md-1"></div>
+      <div class="col-md-5">
+    <h2>Contact</h2>
+  </div>
+  <div class="col-md-6">
+
+  </div>
   </div>
   <div class="row">
     <div class="col-md-1">
