--- a/portfolio.html
+++ b/portfolio.html
@@ -74,10 +74,11 @@
                 </div>
                 <div class="col-md-4">
                     <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="./images/Image-3.jpg" alt=""></a>
+                        <a href="https://morganstyers.github.io/Trivia-Game/"><img class="card-img-top" src="./images/Image-3.jpg" alt=""></a>
                         <div class="card-body">
                             <h4 class="card-title">
-                                <a href="#">Project Three</a>
+                                <a href="#">Trivia Game
+                                </a>
                             </h4>
                             <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos
                                 quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus
