--- a/portfolio.html
+++ b/portfolio.html
@@ -94,10 +94,9 @@
                     <a href="#"><img class="card-img-top" src="./images/Image-4.jpg" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">Project Five</a>
+                            <a href="https://morganstyers.github.io/GifTastic/">GifTastic</a>
                         </h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
-                            euismod odio, gravida pellentesque urna varius vitae.</p>
+                        <p class="card-text">.</p>
                     </div>
                 </div>
             </div>
