--- a/portfolio.html
+++ b/portfolio.html
@@ -15,81 +15,73 @@
 </head>
 
 <body>
-    <div class="container" id="nav">
-
-        <div class="row"></div>
-        <div class="col-md-12">
-            <nav class="navbar navbar-dark bg-dark">
-                <a class="h1">Morgan Styers</a>
-                <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="./portfolio.html">Portfolio<span
-                            class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./index.html">About</a>
-                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
-                </div>
-        </div>
+    <div class="container">
+        <nav class="navbar navbar-dark bg-dark">
+            <a class="h1">Morgan Styers</a>
+            <div class="navbar-nav">
+                <a class="nav-item nav-link active" href="./portfolio.html">Portfolio<span
+                        class="sr-only">(current)</span></a>
+                <a class="nav-item nav-link" href="./index.html">About</a>
+                <a class="nav-item nav-link" href="./contact.html">Contact</a>
         </nav>
-    </div>
-    <br>
-    <br>
-    <div class="main">
+
+        <br>
+
         <div class="row">
-            <div class="col-md-1"></div>
-            <div class="col-md-5">
+            <div class="col-md-12">
                 <h2>Portfolio</h2>
             </div>
-            <div class="col-md-6">
-
-            </div>
         </div>
+
+        <br>
+
         <div class="row">
-            <div class="col-md-1">
 
+            <div class="col-md-4">
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="./images/Image-1.jpg" alt="Psychic"></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="https://morganstyers.github.io/Psychic-Game/.">Psychic Game</a>
+                        </h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
             </div>
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="./images/Image-1.jpg" alt="Psychic"></a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="https://morganstyers.github.io/Psychic-Game/.">Psychic Game</a>
-                            </h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet numquam
-                                aspernatur eum quasi sapiente nesciunt? Voluptatibus sit, repellat sequi itaque
-                                deserunt, dolores in, nesciunt, illum tempora ex quae? Nihil, dolorem!</p>
-                        </div>
+            <div class="col-md-4">
+
+                <div class="card h-100">
+                    <a href="#"><img class="card-img-top" src="./images/Image-2.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="https://morganstyers.github.io/Unit-4-Game/">Crystal Collector</a>
+                        </h4>
+                        <p class="card-text">
+                        </p>
                     </div>
                 </div>
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <a href="#"><img class="card-img-top" src="./images/Image-2.jpg" alt=""></a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="https://morganstyers.github.io/Unit-4-Game/">Unit-4-Game</a>
-                            </h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
-                                euismod odio, gravida pellentesque urna varius vitae.</p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card h-100">
-                        <a href="https://morganstyers.github.io/Trivia-Game/"><img class="card-img-top" src="./images/Image-3.jpg" alt=""></a>
-                        <div class="card-body">
-                            <h4 class="card-title">
-                                <a href="#">Trivia Game
-                                </a>
-                            </h4>
-                            <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quos
-                                quisquam, error quod sed cumque, odio distinctio velit nostrum temporibus necessitatibus
-                                et facere atque iure perspiciatis mollitia recusandae vero vel quam!</p>
-                        </div>
+            </div>
+            <div class="col-md-4">
+
+                <div class="card h-100">
+                    <a href="https://morganstyers.github.io/Trivia-Game/"><img class="card-img-top"
+                            src="./images/Image-3.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="#">Trivia Game
+                            </a>
+                        </h4>
+                        <p class="card-text"></p>
                     </div>
                 </div>
             </div>
         </div>
+
+        <br>
+
         <div class="row">
             <div class="col-md-4">
+
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="./images/Image-4.jpg" alt=""></a>
                     <div class="card-body">
@@ -101,16 +93,30 @@
                 </div>
             </div>
             <div class="col-md-4">
+
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="#">Project Six</a>
+                            <a href="https://morganstyers.github.io/TrainScheduler">Train Schedule</a>
                         </h4>
-                        <p class="card-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam viverra
-                            euismod odio, gravida pellentesque urna varius vitae.</p>
+                        <p class="card-text"></p>
                     </div>
                 </div>
+            </div>
+            <div class="col-md-4">
+                <div class="card h-100">
+
+                    <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
+                    <div class="card-body">
+                        <h4 class="card-title">
+                            <a href="https://morganstyers.github.io/TrainScheduler">Project One</a>
+                        </h4>
+                        <p class="card-text"></p>
+                    </div>
+                </div>
+
+
             </div>
         </div>
     </div>
