--- a/contact.html
+++ b/contact.html
@@ -11,6 +11,8 @@
   <link
     href="https://fonts.googleapis.com/css?family=Bangers|Jacques+Francois+Shadow|Permanent+Marker|VT323&display=swap"
     rel="stylesheet">
+  <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+
   <title>Document</title>
 </head>
 
@@ -24,6 +26,7 @@
           <a class="nav-item nav-link active" href="./contact.html">Contact<span class="sr-only">(current)</span></a>
           <a class="nav-item nav-link" href="./index.html">About</a>
           <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
+
         </div>
     </div>
     </nav>
@@ -33,11 +36,22 @@
 <br>
 
 <body>
+
   <div class="container">
 
+
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <h2>Contact</h2>
+      </div>
+
+      <div class="col-md-4">
+        <a id="i" class="icon ion-logo-github" href="https://github.com/morganstyers"></a>
+        <a id="i" class="icon ion-logo-linkedin" href="https://www.linkedin.com/in/morgan-styers-98892b193/"></a>
+        <a id="i" class="icon ion-ios-mail-open" href="mailto:morganstyers@gmail.com"></a>
+        <a id="i" class="icon ion-ios-text" href="sms:704-999-0358"></a>
+        <a id="i" class="icon ion-md-phone-portrait" href="tel:704-999-0358"></a>
+        <a id="i" class="icon ion-md-paper" href="https://docs.google.com/document/d/1Glb73cpoXt5RTJl6Gs_iS3-U9sM1roC03RyRnKXI4ho/edit?usp=sharing"></a>
       </div>
     </div>
 
@@ -47,6 +61,7 @@
       <div class="col-md-12">
         <div class="card">
           <div class="card-body">
+
             <form>
               <div class="form-group">
                 <label for="exampleFormControlInput1">Name</label>
@@ -61,6 +76,7 @@
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
               </div>
               <button type="button" class="btn btn-outline-dark">Submit</button>
+
             </form>
           </div>
         </div>
