--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,8 @@
                         <h4 class="card-title">
                             <a href="https://morganstyers.github.io/Psychic-Game/.">Psychic Game</a>
                         </h4>
-                        <p class="card-text"></p>
+                        <a class="card-text" href="https://github.com/morganstyers/Psychic-Game">Go To GitHub
+                        </a>
                     </div>
                 </div>
             </div>
@@ -56,8 +57,8 @@
                         <h4 class="card-title">
                             <a href="https://morganstyers.github.io/Unit-4-Game/">Crystal Collector</a>
                         </h4>
-                        <p class="card-text">
-                        </p>
+                        <a class="card-text" href="https://github.com/morganstyers/Unit-4-Game">Go To GitHub
+                        </a>
                     </div>
                 </div>
             </div>
@@ -71,7 +72,8 @@
                             <a href="#">Trivia Game
                             </a>
                         </h4>
-                        <p class="card-text"></p>
+                        <a class="card-text" href="https://github.com/morganstyers/Trivia-Game">Go To GitHub
+                        </a>
                     </div>
                 </div>
             </div>
@@ -88,7 +90,8 @@
                         <h4 class="card-title">
                             <a href="https://morganstyers.github.io/GifTastic/">GifTastic</a>
                         </h4>
-                        <p class="card-text">.</p>
+                        <a class="card-text" href="https://github.com/morganstyers/GifTastic">Go To GitHub
+                        </a>
                     </div>
                 </div>
             </div>
@@ -100,7 +103,8 @@
                         <h4 class="card-title">
                             <a href="https://morganstyers.github.io/TrainScheduler">Train Schedule</a>
                         </h4>
-                        <p class="card-text"></p>
+                        <a class="card-text" href="https://github.com/morganstyers/TrainScheduler">Go To GitHub
+                        </a>
                     </div>
                 </div>
             </div>
@@ -110,9 +114,10 @@
                     <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
                     <div class="card-body">
                         <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/TrainScheduler">Project One</a>
+                            <a href="https://morganstyers.github.io/Project-One">Project One</a>
                         </h4>
-                        <p class="card-text"></p>
+                        <a class="card-text" href="https://github.com/morganstyers/Project-One">Go To GitHub
+                        </a>
                     </div>
                 </div>
 
