--- a/portfolio.html
+++ b/portfolio.html
@@ -34,9 +34,8 @@
         </div>
 
         <br>
-
+<div id="folio">
         <div class="row">
-
             <div class="col-md-4">
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="./images/Image-1.jpg" alt="Psychic"></a>
@@ -83,7 +82,6 @@
 
         <div class="row">
             <div class="col-md-4">
-
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="./images/Image-4.jpg" alt=""></a>
                     <div class="card-body">
@@ -96,7 +94,6 @@
                 </div>
             </div>
             <div class="col-md-4">
-
                 <div class="card h-100">
                     <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
                     <div class="card-body">
@@ -110,8 +107,7 @@
             </div>
             <div class="col-md-4">
                 <div class="card h-100">
-
-                    <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
+                   <div> <a  href="#"><img id="p1" class="card-img-top" src="./images/Image-5.jpg" alt=""></a></div>
                     <div class="card-body">
                         <h4 class="card-title">
                             <a href="https://morganstyers.github.io/Project-One">Project One</a>
@@ -120,11 +116,10 @@
                         </a>
                     </div>
                 </div>
-
-
             </div>
         </div>
     </div>
+</div>
 </body>
 
 </html>
