--- a/portfolio.html
+++ b/portfolio.html
@@ -17,109 +17,103 @@
 <body>
     <div class="container">
         <nav class="navbar navbar-dark bg-dark">
-            <a class="h1">Morgan Styers</a>
+            <a href="./index.html" class="h1">Morgan Styers</a>
             <div class="navbar-nav">
                 <a class="nav-item nav-link active" href="./portfolio.html">Portfolio<span
                         class="sr-only">(current)</span></a>
-                <a class="nav-item nav-link" href="./index.html">About</a>
-                <a class="nav-item nav-link" href="./contact.html">Contact</a>
+            </div>
         </nav>
-
-        <br>
-
-        <div class="row">
-            <div class="col-md-12">
+    </div>
+    <br>
+    <div class="container">
+        <div class="card">
+            <div class="card-header">
                 <h2>Portfolio</h2>
             </div>
-        </div>
+            
+            <div class="card-body">
+                <div class="row">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>Psychic Game</h4>
+                            </div>
+                            <div class="card-body">
+                                <img class="card-img"src="images/Screen Shot 2019-09-18 at 4.51.59 AM.png">
+                               </div>
+<div class="card-footer">
+                                <button class="btn btn-dark" href="https://morganstyers.github.io/Psychic-Game/."> Demo
+                                </button>
+                                <button class="btn btn-dark" href="https://github.com/morganstyers/Psychic-Game">Go To
+                                    GitHub</button>
+                            </div>
+                        </div>
+                    </div>
 
-        <br>
-<div id="folio">
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="./images/Image-1.jpg" alt="Psychic"></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/Psychic-Game/.">Psychic Game</a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/Psychic-Game">Go To GitHub
-                        </a>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>Crystal Collector</h4>
+                            </div>
+                            <div class="card-body">
+                                <button class="btn btn-dark" href="https://morganstyers.github.io/Unit-4-Game/">
+                                    Demo</button>
+                                <button class="btn btn-dark" href="https://github.com/morganstyers/Unit-4-Game">Go To
+                                    GitHub</button>
+                            </div>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="col-md-4">
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>GifTastic</h4>
+                            </div>
+                            <div class="card-body">
+                                <button class="btn btn-dark"
+                                    href="https://morganstyers.github.io/GifTastic/">Demo</button>
+                                <button class="btn btn-dark" href="https://github.com/morganstyers/GifTastic">Go To
+                                    GitHub
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-3">
+                        <div class="card">
+                            <div class="card-title">
+                                <h4>Train Scheduler</h4>
+                            </div>
 
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="./images/Image-2.jpg" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/Unit-4-Game/">Crystal Collector</a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/Unit-4-Game">Go To GitHub
-                        </a>
+                            <div class="card-body">
+                                <button class="btn btn-dark"
+                                    href="https://morganstyers.github.io/TrainScheduler">Demo</button>
+                                <button class="btn btn-dark" class="card-text"
+                                    href="https://github.com/morganstyers/TrainScheduler">Go To GitHub
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-title">
+                            <h4>Peruse For Brews</h4>
+                        </div>
+                        <div class="card-body">
+                            <button class="btn btn-dark" href="https://morganstyers.github.io/Project-One">Demo</button>
+                            <button class="btn btn-dark" href="https://github.com/morganstyers/Project-One">Go To
+                                GitHub</button>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4">
 
-                <div class="card h-100">
-                    <a href="https://morganstyers.github.io/Trivia-Game/"><img class="card-img-top"
-                            src="./images/Image-3.jpg" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="#">Trivia Game
-                            </a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/Trivia-Game">Go To GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
 
-        <br>
 
-        <div class="row">
-            <div class="col-md-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="./images/Image-4.jpg" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/GifTastic/">GifTastic</a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/GifTastic">Go To GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100">
-                    <a href="#"><img class="card-img-top" src="./images/Image-5.jpg" alt=""></a>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/TrainScheduler">Train Schedule</a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/TrainScheduler">Go To GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card h-100">
-                   <div> <a  href="#"><img id="p1" class="card-img-top" src="./images/Image-5.jpg" alt=""></a></div>
-                    <div class="card-body">
-                        <h4 class="card-title">
-                            <a href="https://morganstyers.github.io/Project-One">Project One</a>
-                        </h4>
-                        <a class="card-text" href="https://github.com/morganstyers/Project-One">Go To GitHub
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+
+
+
 </body>
 
 </html>
