--- a/index.html
+++ b/index.html
@@ -8,6 +8,17 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <link href="https://unpkg.com/ionicons@4.5.10-0/dist/css/ionicons.min.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+        integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+        integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+        crossorigin="anonymous"></script>
+
     <link
         href="https://fonts.googleapis.com/css?family=Bangers|Jacques+Francois+Shadow|Permanent+Marker|VT323&display=swap"
         rel="stylesheet">
@@ -17,56 +28,90 @@
 <body>
     <div class="container">
         <div id="nav">
-
             <nav class="navbar navbar-dark bg-dark">
-                <a class="h1">Morgan Styers</a>
+                <a href="./index.html" class="h1">Morgan Styers</a>
                 <div class="navbar-nav">
-                    <a class="nav-item nav-link active" href="./index.html">About<span
-                            class="sr-only">(current)</span></a>
-                    <a class="nav-item nav-link" href="./contact.html">Contact</a>
                     <a class="nav-item nav-link" href="./portfolio.html">Portfolio</a>
                 </div>
             </nav>
         </div>
-
         <br>
-
         <div class="row">
-            <div class="col-md-12">
-                <h2>About</h2>
-            </div>
-        </div>
+            <div class="col-md-9">
+                <div class="container">
 
-        <br>
+                    <div id="about" class="card">
+                        <div class="card-header">
+                            <h2>About</h2>
+                        </div>
+                        <div class="card-body">
 
-        <div class="row">
-            <div class="col-md-12">
-                <div class="card">
-                    <div class="card-body">
-                        <img src="./images/66879387_2815013368514520_4414419532026740736_n.jpg" class="aboutphoto"
-                            alt="Responsive image">
-                        <p>
                             <p> My name is Morgan Styers, I'm 23 years old and a Charlotte, North Carolina Native. I
                                 graduated from Cato Middle College Highschool with an Associates Degree in Art and Art
                                 Management. Directly following graduation, I was signed in Los Angeles, California, for
                                 modeling and acting. I moved myself and two cats to Koreatown where I lived for 5 years,
-                                was
-                                published in 6 magazines and completed 4 international commercials and 7 films, one of
-                                which
-                                I starred in.
+                                was published in 6 magazines and completed 4 international commercials and 7 films, one
+                                of
+                                which I starred in.
                             </p>
                             <p>
                                 In my spare time, I love to do digital art and sculpture, play with my cats and collect
                                 sharksteeth, micro-minerals and band t-shirts. My favorite place to be in on the ocean
-                                and I
-                                absolutely love to sail.
+                                and I absolutely love to sail.
                             </p>
+                        </div>
+
                     </div>
                 </div>
             </div>
 
+            <div class="col-md-3">
+                <div class="container">
+                    <div id="contact" class="card">
+                        <div class="card-header">
+                            <h2>Contact Me</h2>
+                        </div>
+                        <div id="ic" class="card-body">
+
+                            <a id="i" class="icon ion-logo-github" href="https://github.com/morganstyers"></a>
+                            <a id="i" class="icon ion-logo-linkedin"
+                                href="https://www.linkedin.com/in/morgan-styers-98892b193/"></a>
+                            <a id="i" class="icon ion-ios-mail-open" href="mailto:morganstyers@gmail.com"></a>
+                            <a id="i" class="icon ion-ios-text" href="sms:704-999-0358"></a>
+                            <a id="i" class="icon ion-ios-call" href="tel:704-999-0358"></a>
+                            <a id="i" class="icon ion-md-paper" data-toggle="modal" data-target="#resume"></a>
+
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
+
     </div>
+    <div class="modal fade" id="resume" tabindex="-1" role="dialog" aria-labelledby="resume" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-scrollable modal-centered">
+            <div class="modal-content" >
+                <div class="modal-header" id="res">
+                    <h2>Resume</h2>
+                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+                <div class="modal-body"id="resumes">
+                    <iframe width="100%" height="700px" src="./images/Resume.pdf"></iframe>
+                </div>
+
+                <div class="modal-footer justify-content-center">
+                    <button type="button" target="_blank" class="btn btn-warning btn-outline-dark" href="./images/Resume.pdf" download="MorganStyers">Wanna Keep It?</button>
+                    <button type="button" class="btn btn-warning btn-outline-dark"  data-dismiss="modal">
+                            Close
+                        </button>
+                </div>
+            </div>
+        </div>
+
+    </div>
+
 
 </body>
 
