--- a/portfolio.html
+++ b/portfolio.html
@@ -30,87 +30,103 @@
             <div class="card-header">
                 <h2>Portfolio</h2>
             </div>
-            
             <div class="card-body">
                 <div class="row">
+                    <!----
+
                     <div class="col-md-3">
                         <div class="card">
                             <div class="card-title">
                                 <h4>Psychic Game</h4>
                             </div>
                             <div class="card-body">
-                                <img class="card-img"src="images/Screen Shot 2019-09-18 at 4.51.59 AM.png">
-                               </div>
-<div class="card-footer">
-                                <button class="btn btn-dark" href="https://morganstyers.github.io/Psychic-Game/."> Demo
-                                </button>
-                                <button class="btn btn-dark" href="https://github.com/morganstyers/Psychic-Game">Go To
-                                    GitHub</button>
+                                <img class="card-img" src="">
+                            </div>
+                            <div class="card-footer">
+                                <a class="btn btn-dark" href="https://morganstyers.github.io/Psychic-Game/."> Demo
+                                </a>
+                                <a class="btn btn-dark" src="https://github.com/morganstyers/Psychic-Game">Go To
+                                    GitHub</a>
                             </div>
                         </div>
-                    </div>
+                    </div>-->
 
                     <div class="col-md-3">
                         <div class="card">
-                            <div class="card-title">
+                            <div class="card-header">
                                 <h4>Crystal Collector</h4>
                             </div>
                             <div class="card-body">
-                                <button class="btn btn-dark" href="https://morganstyers.github.io/Unit-4-Game/">
-                                    Demo</button>
-                                <button class="btn btn-dark" href="https://github.com/morganstyers/Unit-4-Game">Go To
-                                    GitHub</button>
+                                <img class="card-img" src="images/Screen Shot 2019-09-18 at 4.51.02 AM.png">
+                            </div>
+                            <div class="card-footer">
+                                <a class="btn btn-dark" href="https://morganstyers.github.io/Unit-4-Game/">
+                                    Demo</a>
+                                <a class="btn btn-dark" href="https://github.com/morganstyers/Unit-4-Game">Go To
+                                    GitHub</a>
                             </div>
                         </div>
                     </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <div class="card-title">
-                                <h4>GifTastic</h4>
-                            </div>
-                            <div class="card-body">
-                                <button class="btn btn-dark"
-                                    href="https://morganstyers.github.io/GifTastic/">Demo</button>
-                                <button class="btn btn-dark" href="https://github.com/morganstyers/GifTastic">Go To
-                                    GitHub
-                                </button>
-                            </div>
+               
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-header">
+                            <h4>GifTastic</h4>
                         </div>
-                    </div>
-                    <div class="col-md-3">
-                        <div class="card">
-                            <div class="card-title">
-                                <h4>Train Scheduler</h4>
-                            </div>
-
-                            <div class="card-body">
-                                <button class="btn btn-dark"
-                                    href="https://morganstyers.github.io/TrainScheduler">Demo</button>
-                                <button class="btn btn-dark" class="card-text"
-                                    href="https://github.com/morganstyers/TrainScheduler">Go To GitHub
-                                </button>
-                            </div>
+                        <div class="card-body">
+                            <img class="card-img" src="images/Screen Shot 2019-09-18 at 4.51.18 AM.png">
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-dark" href="https://morganstyers.github.io/GifTastic/">Demo</a>
+                            <a class="btn btn-dark" href="https://github.com/morganstyers/GifTastic">Go To
+                                GitHub
+                            </a>
                         </div>
                     </div>
                 </div>
-                <br>
-                <div class="row">
-                    <div class="col-md-3">
+                <div class="col-md-3">
                     <div class="card">
-                        <div class="card-title">
+                        <div class="card-header">
+                            <h4>Train Scheduler</h4>
+                        </div>
+
+                        <div class="card-body">
+                            <img class="card-img" src="images/Screen Shot 2019-09-18 at 4.51.33 AM.png">
+                        </div>
+                        <div class="card-footer">
+                            <a class="btn btn-dark" href="https://morganstyers.github.io/TrainScheduler">Demo</a>
+                            <a class="btn btn-dark" class="card-text"
+                                href="https://github.com/morganstyers/TrainScheduler">Go To GitHub
+                            </a>
+                        </div>
+                    </div>
+                </div>
+
+                <br>
+
+                <div class="col-md-3">
+                    <div class="card">
+                        <div class="card-header">
                             <h4>Peruse For Brews</h4>
                         </div>
                         <div class="card-body">
-                            <button class="btn btn-dark" href="https://morganstyers.github.io/Project-One">Demo</button>
-                            <button class="btn btn-dark" href="https://github.com/morganstyers/Project-One">Go To
-                                GitHub</button>
+                            <img class="card-img"
+                                src="/Users/morganstyers/Bootstrap-Portfolio/images/Screen Shot 2019-09-18 at 4.51.59 AM.png">
+                            </div>
+                            <div class="card-footer">
+                            <a class="btn btn-dark" href="https://morganstyers.github.io/Project-One">Demo</a>
+                            <a class="btn btn-dark" href="https://github.com/morganstyers/Project-One">Go To
+                                GitHub</a>
                         </div>
                     </div>
                 </div>
             </div>
 
+        </div>
+    </div>
 
 
+    </div>
 
 
 
